src/compiletest/qcell-04.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> src/compiletest/qcell-04.rs:11:17
   |
10 |     let c1mutref = owner.rw(&c1);
   |                    ------------- mutable borrow occurs here
11 |     let c2ref = owner.ro(&c2);    // Compile error
   |                 ^^^^^^^^^^^^^ immutable borrow occurs here
12 |     *c1mutref += 1;
   |     -------------- mutable borrow later used here
